      branches, and this was not noticed due to a bug in the test logic
      for branches. This is now fixed and a test added to prevent it
      reoccuring. (Robert Collins, Andrew Bennetts)

  DOCUMENTATION:

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:

    * ``bzr selftest`` now fails if the bazaar sources contain trailing
      whitespace, non-unix style line endings and files not ending in a
      newline. About 372 files and 3243 lines with trailing whitespace was
      updated to comply with this. The code already complied with the other
      criteria, but now it is enforced. (Marius Kruger)

  INTERNALS:

    * Branch and Repository creation on a bzr+ssh://server are now done
      via RPC calls rather than VFS calls, reducing round trips for
      pushing new branches substantially. (Robert Collins)

    * ``Branch.clone`` now takes the ``repository_policy`` formerly used
      inside ``BzrDir.clone_on_transport``, allowing stacking to be
      configured before the branch tags and revision tip are set. This
      fixes a race condition cloning stacked branches that would cause
      plugins to have hooks called on non-stacked instances.
      (Robert Collins, #334187)

    * ``BzrDirFormat.__str__`` now uses the human readable description
      rather than the sometimes-absent disk label. (Robert Collins)

    * ``bzrlib.fetch`` is now composed of a sender and a sink component
      allowing for decoupling over a network connection. Fetching into
      a RemoteRepository uses this to stream the operation.
      (Andrew Bennetts, Robert Collins)

    * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
      supporting the use of different runners. (Robert Collins)

    * New branch method ``create_clone_on_transport`` that returns a
      branch object. (Robert Collins)

    * New hook Commands['extend_command'] to allow plugins to access a