@@ -79,6 +79,9 @@ IN DEVELOPMENT
     * The documentation for ``shelve`` and ``unshelve`` has been clarified.
       (Daniel Watkins, #327421, #327425)
 
+    * The generated manpage now explicitly lists aliases as commands.
+      (James Westby, #336998)
+
   API CHANGES:
 
     * ``bzr selftest`` now fails if the bazaar sources contain trailing
